feat: improvements for startup and resources planets archetypes
